--- a/slides/polmineR_KWIC.Rmd
+++ b/slides/polmineR_KWIC.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Nutzung von Konkordanzen in 'polmineR'"
-subtitle: 'Beispielanalysen mit dem GermaParl-Korpus'
+title: "Usage of concordances in 'polmineR'"
+subtitle: 'Sample analyses with the GermaParl corpus'
 author: "Andreas Blaette"
 date: "28 Mai 2018"
 output:
@@ -14,24 +14,24 @@ editor_options:
 
 
 ```{r, message = FALSE, results = "hide", echo = FALSE}
-# Dieser Code wird im Foliensatz nicht angezeigt und ist nur erforderlich,
-# um gegebenenfalls fehlende Pakete nachzuladen:
-# kable und kableExtra werden benötigt, um tabellarische Ausgaben zu generieren.
+# This code is not displayed in the slide set and is only required,
+# to reload any missing packages:
+# kable and kableExtra are needed to generate tabular output.
 if (!"knitr" %in% rownames(installed.packages())) install.packages("knitr")
 if (!"kableExtra" %in% rownames(installed.packages())) install.packages("kableExtra")
 ```
 
 
-## Initialisierung
+## Initialisiation
 
-Die Beispiele basieren auf dem GermaParl-Korpus. Der Datensatz in dem Paket muss nach dem Laden von polmineR mit dem `use`-Befehl aktiviert werden.
+The examples are based on the GermaParl corpus. The data set in the package must be activated with the `use` command after loading polmineR.
 
 ```{r initialize, eval = TRUE, message=FALSE}
 library(polmineR)
 use("GermaParl")
 ```
 
-Wenn Sie den Code der folgenden Beispiele auf Ihrem eigenen Rechner nachvollziehen möchten, können Sie das 'Rmarkdown'-Dokument, mit dem der Foliensatz generiert wurde, direkt in R laden:
+If you want to follow the code of the following examples on your own computer, you can load the 'Rmarkdown' document, with which the slide set was generated, directly into R:
 
 ```{r get_code, eval = FALSE}
 if (!"RCurl" %in% rownames(installed.packages())) install.packages("RCurl")
@@ -43,48 +43,47 @@ script <- getURL(
 ```
 
 
-Speichern Sie das Skript auf Ihrem Schreibtisch - oder an einem anderen Speicherort.
+Save the script to your desktop - or to another location.
 
 ```{r save_code, eval = FALSE}
 filename <- "~/Desktop/polmineR_KWIC.Rmd"
 if (interactive()) writeLines(text = script, con = filename)
 ```
 
-Wenn Sie jetzt das Dokument öffnen, können Sie den Code Schritt für Schritt nachvollziehen. Nutzen Sie den Code als Ausgnagspunkt für Ihre eigenen Analysen!
+If you now open the document, you can follow the code step by step. Use the code as a starting point for your own analyses!
 
 ----
 
-## Konkordanen und KWIC: Basics
+## Concordances and KWIC: Basics
 
-  * Die Analyse von Wortumfeldern von Worten und Suchbegriffen übernimmt als analytischer Schritt eine Scharnierfunktion zwischen quantitativen Zählverfahren und einem qualitativ-interpretativen Zugang zu Textdaten. In der Linguistik wird dabei von Konkordanzen gesprochen, in der sozialwissenschaftlichen Tradition der Inhaltsanalyse von Keyword-In-Context-Analysen (kurz "KWIC"). Der Kürze und Prägnanz wegen heißt die Methode im polmineR-Paket kurz `kwic`.
+  * The analysis of word surroundings of terms and search strings serves as an analytical bridge between quantitative counting methods and a qualitative-interpretative approach to text data. Linguistics calls this concordances, while the social science tradition of content analysis refers to keyword-in-context analyses ("KWIC" for short). For brevity and clarity, the method in the polmineR package is called `kwic`.
   
-  * Eine wichtige Vorentscheidung ist die Festlegung, wie viele Worte nach links und nach rechts angezeigt werden sollen. In linguistischen Analysen (hier oft Lexikographie, d.h. Entwicklung von Lexika) ist ein Fenster von 5 Worten links und rechts gebräuchlich. Wie viel Kontext benötigen Sie als Politikwissenschaftler für eine Grob-Kontextualisierung? Häufig wird das mehr sein, als im linguistischen Verwendungskontext von Konkordanzen / dem KWIC-Verfahren.
+  * An important preliminary decision is to define how many words are to be displayed to the left and to the right. In linguistic analyses (expecially in lexicography, i.e. development of lexica) a window of 5 words is used left and right. How much context do you as a political scientist need for a rough contextualization? Often this will be more than in the linguistic usage of concordances / the KWIC procedure.
   
-  * Zum Teil wird es nicht ausreichen, nur einen kurzen Textausschnitt im Umfeld eines Wortes zu lesen und zu interpretieren. Wenn erforderlich, sollte die Lektüre des Volltextes eines Suchtreffers erfolgen. Dies leistet im polmineR-Paket die `read`-Methode.
-  
-
-----
-
-## Konkordanzen und KWIC: Im Forschungsprozess
-
-  * Die Analyse von Konkordanzen lässt sich sinnvoll auch mit der statistischen Analysen von Kookkurrenzen verbinden: Die Kookkurrenz-Analyse liefert Hinweise auf statische Auffälligkeiten des Sprachgebrauchs, die dann per KWIC näher analysiert und interpretiert werden.
-  
-  * Ein sinnvoller Schritt zur Systematisierung von Interpretationen von Konkordanzen ist, diese zu kategorisieren bzw. typisieren. Dafür kann es hilfreich sein, diese nach Excel zu exportieren (Methode `mail`), um dort in einer Zusatzspalte Kategorisierungen einzutragen bzw. Interpretationen zu notieren.
-  
-  * Bitte übersehen Sie bei der Arbeit mit Konkordanzen nicht, dass es sich um ein interpretative Arbeit handelt, die hermeneutisches Gespühr erfordert! 
+  * In some cases it will not be sufficient to read and interpret only a short text excerpt in the context of a word. If necessary, the full text of a search hit should be read. This is achieved in the polmineR package by the `read` method.
   
 
 ----
 
-## KWIC-Methode: Grundlagen
+## Concordances and KWIC: During the research process
 
-Wie bei anderen Funktionen und Methoden können Sie die Dokumentation zur `kwic`-Methode aufrufen, indem Sie ein Fragezeichen voranstellen. Dort finden Sie übrigens auch erste Literaturhinweise!
+  * The analysis of concordances can also be usefully combined with the statistical analysis of coccurrences: The coocurrency analysis provides information on static conspicuities of language usage, which are then analysed and interpreted in more detail using KWIC.
+  
+  * A useful step for systematizing interpretations of concordances is to categorize or classify them. It can be helpful to export them to Excel (via the `mail` method) in order to enter categorizations or note down interpretations in an additional column there.
+  
+  * When working with concordances, please be aware that this is an interpretative work that requires a hermeneutic feeling!
+
+----
+
+## KWIC method: The basics
+
+As with other functions and methods in R, you can call the documentation for the `kwic` method by placing a question mark in front of it. You will also find first bibliographical references there!
 
 ```{r, eval = FALSE}
 ?kwic
 ```
 
-Die Methode kann auf Objekte der Klassen `character` (d.h. auf ein Korpus als Ganzes), `partition` und `context` angewendet werden. Den Suchbegriff definieren Sie über das Argument `query`.
+The method can be applied to objects of the classes `character` (i.e. to a corpus as a whole), `partition` and `context`. You define the search term using the `query` argument.
 
 ```{r, eval = FALSE}
 kwic("GERMAPARL", query = "Migrationshintergrund")
@@ -93,34 +92,34 @@ bt2005 <- partition("GERMAPARL", year = 2005)
 kwic(bt2005, query = "Migrationshintergrund")
 ```  
 
-Bei der Formulierung von Suchanfragen können Sie wie die CQP-Syntax verwenden. Setzen Sie dafür das Argument `cqp` auf `TRUE`. (Wenn Sie das nicht machen, prüft polmineR automatisch, ob die CQP-Syntax verwendet wird.)
+When formulating search queries, you can use the same CQP syntax. Set the argument `cqp` to `TRUE`. (If you do not do this, polmineR automatically checks whether the CQP syntax is used.)
 
 ```{r, eval = FALSE}
 kwic("GERMAPARL", query = '[pos = "NN"] "mit" "Migrationshintergrund"', cqp = TRUE)
 kwic(bt2005, query = '[pos = "NN"] "mit" Migrationshintergrund"', cqp = TRUE)
 ```  
 
-Die Ausgabe des Ergebnisse erfolgt dann im Viewer-Panel von RStudio.
+The results are then displayed in RStudio's Viewer Panel.
 
 ----
 
-## KWIC: Einsatzszenarien
+## KWIC: Application scenarios
 
-Wie eingangs besprochen, werden Sie oft mehr Wortumfeld sehen wollen als nur (wie voreingestellt) fünf Worte links und rechts. Nutzen Sie für die Bestimmung des Wortumfels die Argument `left` und `right`.
+As discussed earlier, you will often want to see more of the word surroundings than just (as default) five words left and right. Use the arguments `left` and `right` to determine the word range.
 
 ```{r, eval = FALSE}
 kwic("GERMAPARL", query = "Ausländer", left = 10, right = 10)
 kwic("GERMAPARL", query = "Ausländer", left = 15, right = 15)
 ```
 
-Es gibt gute gründe davon auszugehen, dass Merkmale eines Sprechers wie Fraktions- bzw. Parteizugehörigkeit (Parteiendifferenzthese!), Geschlecht etc. einen Unterschied machen: Zeigen Sie die Metadaten zu einer Konkordanz mit dem Argument `sAttribute` an. Beachte: Mehrere Attribute müssen kombiniert werden über c(), das "c" steht hier für "combine".
+There are good reasons to assume that characteristics of a speaker such as parliamentary group or party affiliation (thesis of party differences!), gender etc. make a difference: Display the metadata for a concordance with the `sAttribute` argument. Note: Several attributes must be combined using c(), the "c" here stands for "combine".
 
 ```{r, eval = FALSE}
 kwic(bt2005, query = "Ausländer", sAttribute = "party")
 kwic(bt2005, query = "Ausländer", sAttribute = c("party", "date"))
 ```
 
-Um den Volltext zu einer Konkordanz zu lesen, machen Sie eine Zwischenspeicherung des KWIC-Ergebnisses, und wenden dann die `read`-Methode an.
+To read the full text of a concordance, perform a temporary save of the KWIC result, and then apply the `read` method.
 
 ```{r, eval = FALSE}
 K <- kwic(bt2005, query = "Ausländer", sAttribute = "party")
