--- a/slides/polmineR_Zeitreihen.Rmd
+++ b/slides/polmineR_Zeitreihen.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Analyse von Zeitreihen mit 'polmineR'"
-subtitle: 'Beispielanalysen mit dem GermaParl-Korpus'
+title: "Time series analysis with 'polmineR'"
+subtitle: 'Sample analyses with the GermaParl corpus'
 author: "Andreas Blaette"
 date: "13 Mai 2018"
 output:
@@ -13,16 +13,16 @@ editor_options:
 ---
 
 
-## Initialisierung
+## Initialisiation
 
-Die Beispiele basieren auf dem GermaParl-Korpus. Der Datensatz in dem Paket muss nach dem Laden von polmineR mit dem `use-Befehl aktiviert werden.
+The examples are based on the GermaParl corpus. The data set in the package must be activated with the `use` command after loading polmineR.
 
 ```{r initialize, eval = TRUE, message=FALSE}
 library(polmineR)
 use("GermaParl")
 ```
 
-Wenn Sie den Code der folgenden Beispiele auf Ihrem eigenen Rechner nachvollziehen möchten, können Sie das 'Rmarkdown'-Dokument, mit dem der Foliensatz generiert wurde, direkt in R laden:
+If you want to follow the code of the following examples on your own computer, you can load the 'Rmarkdown' document, with which the slide set was generated, directly into R:
 
 ```{r get_code, eval = FALSE}
 if (!"RCurl" %in% rownames(installed.packages())) install.packages("RCurl")
@@ -33,34 +33,33 @@ script <- getURL(
   )
 ```
 
-
-Speichern Sie das Skript auf Ihrem Schreibtisch - oder an einem anderen Speicherort.
+Save the script to your desktop - or to another location.
 
 ```{r save_code, eval = FALSE}
 filename <- "~/Desktop/polmineR_Zeitreihen.Rmd"
 if (interactive()) writeLines(text = script, con = filename)
 ```
 
-Wenn Sie jetzt das Dokument öffnen, können Sie den Code Schritt für Schritt nachvollziehen (und auf Ihre Bedürfnisse anpassen).
+If you now open the document, you can follow the code step by step (and change it according to your requirements)
 
 ----
 
-## Zeit und Häufigkeitsverteilungen
+## Time and frequency distributions
 
-Die Häufigkeit von Worten (im Sinne von Schlagworten) oder von Suchbegriffen lässt sich mit der `count`-Methode bestimmen. Die `dispersion`-Methode vollzieht die Zählung über ein oder zwei strukturelle Attribute (d.h. Dimensionen).
+The frequency of words (in the sense of keywords) or search terms can be determined with the `count` method. The `dispersion` method performs the count using one or two structural attributes (i.e. dimensions).
 
 ```{r get_simple_dispersion}
 dt <- dispersion("GERMAPARL", query = "Flüchtlinge", sAttribute = "year")
-head(dt) # wir betrachten nur den Anfang der Tabelle
+head(dt) # we consider only the beginning of the table
 ```
 
-Eine schöne und praktische Ansicht bietet die `View`-Funktion von RStudio.
+A nice and practical view is offered by the `View` function of RStudio.
 
 ```{r, eval = interactive()}
 View(dt)
 ```
 
-Der Rückgabewert die `dispersion`-Methode ist ein `data.table`. Wenn Sie es gewöhnt sind, mit `data.frame`-Objekten zu arbeiten, können Sie die Umwandlung leicht vollziehen.
+The return value of the `dispersion` method is a `data.table`. If you are used to working with `data.frame` objects, you can easily convert it.
 
 ```{r}
 df <- as.data.frame(dt)
@@ -68,32 +67,32 @@ df <- as.data.frame(dt)
 
 ----
 
-## Einfache Visualisierung der Häufigkeiten
+## Simple visualization of frequencies
 
 ```{r}
 barplot(height = df[["count"]], names.arg = df[["year"]], las = 2)
 ```
 
-Dieses einfache Balkendiagramm bestätigt bereits die Vermutung, dass der sprunghafte Anstieg der Fluchtmigration von 2015 auch im Bundestag erheblichen Widerhall hatte.
+This simple bar chart already confirms the assumption that the sharp increase in forced migration in 2015 also had a considerable impact on the German Bundestag.
 
 ----
 
-## Häufigkeitsverteilung über zwei Dimensionen
+## Frequency distribution in two dimensions
 
-Der Analyse fügen wir jetzt noch als zweite Dimension eine Differenzierung nach Parteien hinzu.
+We now add a second dimension to the analysis: differentiation by political parties.
 
 ```{r}
 dt <- dispersion("GERMAPARL", query = "Flüchtlinge", sAttribute = c("year", "party"))
 ```
 
-Für die Arbeit mit Zeitreihen-Daten nutzen wir das `xts`-Paket, das bei Bedarf zuerst installiert wird.
+To work with time series data, we use the `xts` package, which will be installed first if required.
 
 ```{r, message = FALSE}
 if (!"xts" %in% rownames(installed.packages())) install.packages("xts")
 library(xts)
 ```
 
-Wir erzeugen nun ein `xts`-Objekt auf Basis der schon erfolgten Kreuztabelle mit den Häufigkeiten und schauen, wie das aussieht.
+We create an `xts` object based on the already existing crosstable containing the frequencies and see what it looks like.
 
 ```{r}
 ts <- xts(x = dt[,c("CDU", "CSU", "FDP", "GRUENE", "SPD")],
@@ -103,9 +102,9 @@ head(ts)
 
 ----
 
-## Visualisierung des Zeitverlaufs
+## Visualization of time progression
 
-Besser sind die Dinge über ein Zeitreihen-Diagramm zu erkennen.
+Things are better seen through a time series diagram.
 
 ```{r}
 plot(ts, multi.panel = TRUE, col = c("black", "black", "blue", "green", "red"), lwd = 2)
@@ -113,9 +112,7 @@ plot(ts, multi.panel = TRUE, col = c("black", "black", "blue", "green", "red"), 
 
 ----
 
-## Was passiert während der Jahre?
-
-
+## What happens throughout the years?
 
 ```{r}
 dt <- dispersion("GERMAPARL", query = "Flüchtlings", sAttribute = "date")
@@ -123,20 +120,20 @@ ts <- xts(x = dt[["count"]], order.by = as.Date(dt[["date"]]))
 plot(ts)
 ```
 
-Das sieht wenig aussagekräftig aus. Wir sollten daher einen Weg finden, die Zählung auf einen größeren Zeitraum zu aggregieren.
+That doesn't look very convincing. We should therefore find a way to aggregate the census over a longer time period.
 
 ---- 
 
-## Woche - Monat - Quartal - Jahr
+## Week - month - quarter - year
 
-Als Zeiteinheit für eine Aggregation über den einzelnen Tag hinaus werden wir Woche, Monat, Quartal und Jahr verwenden. Für die Wochen brauchen wir das `lubridate`-Paket.
+We will use the week, month, quarter and year as time units for aggregation beyond the individual day. For the weeks we need the `lubridate` package.
 
 ```{r load_lubridate, message = FALSE}
 if (!"lubridate" %in% rownames(installed.packages())) install.packages("lubridate")
 library(lubridate)
 ```
 
-Nun legen wir aggregierte Zeitreihenobjekte an. Der Code hierfür ist bewusst kompakt und vielleicht nicht auf Anhieb verständlich. Im Zweifelsfall ... per copy & paste bedienen!
+Now we create aggregated time series objects. The code for this is intentionally compact and perhaps not immediately comprehensible. In case of doubt ... use copy & paste!
 
 ```{r}
 ts_week <- aggregate(ts, {a <- ymd(paste(year(index(ts)), 1, 1, sep = "-")); week(a) <- week(index(ts)); a})
@@ -147,10 +144,10 @@ ts_year <- aggregate(ts, as.Date(sprintf("%s-01-01", gsub("^(\\d{4})-.*?$", "\\1
 
 ----
 
-Welche Aggregation der Zeitreihe erscheint Ihnen am sinnvollsten?
+Which time series aggregation makes the most sense to you?
 
 ```{r}
 par(mfrow = c(2,2), mar = c(2,2,3,1))
-plot(ts_week, main = "Aggregation: Woche"); plot(ts_month, main = "Aggregation: Monat");
-plot(ts_qtr, main = "Aggregation: Quartal"); plot(ts_year, main = "Aggregation: Jahr")
+plot(ts_week, main = "Aggregation: Week"); plot(ts_month, main = "Aggregation: Month");
+plot(ts_qtr, main = "Aggregation: Quarter"); plot(ts_year, main = "Aggregation: Year")
 ```
